--- a/Frontend/src/styles/header.css
+++ b/Frontend/src/styles/header.css
@@ -2,7 +2,7 @@
     margin: 0 auto;
     box-sizing: border-box;
     padding: 15px 110px;
-    box-shadow: 0px 5px 5px rgb(235, 235, 235);
+    background-color: white;
     position: sticky;
 }
 
