--- a/Frontend/src/styles/home.css
+++ b/Frontend/src/styles/home.css
@@ -101,3 +101,33 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+
+/* testimonaial section */
+.testimonialSection{
+    padding: 60px 0px 80px 0;
+}
+
+.testimonialSection h2 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.slick-dots {
+    bottom: -40px !important;
+}
+
+.slick-slider {
+    display: flex !important;
+    align-items: center;
+}
+
+.slick-slide > div {
+    margin: 0 10px;
+}
+
+.slick-dots li button:before {
+    color: #a2a2a2 !important;
+    font-size: 10px !important; 
+}
+
