--- a/Frontend/src/styles/header.css
+++ b/Frontend/src/styles/header.css
@@ -1,9 +1,13 @@
 .header {
+    z-index: 999;
+    width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
     padding: 15px 110px;
     background-color: white;
-    position: sticky;
+    position: fixed;
+    top: 0%;
+    left: 0%;
 }
 
 .linksHeader {
