--- a/Frontend/src/styles/home.css
+++ b/Frontend/src/styles/home.css
@@ -1,6 +1,6 @@
 /* main section */
 .mainSection{
-    padding: 30px 0px 60px 0px;
+    padding: 120px 0px 60px 0px;
     background-color: #EEF3FA;
 }
 
@@ -105,7 +105,7 @@
 
 /* testimonaial section */
 .testimonialSection{
-    padding: 60px 0px 80px 0;
+    padding: 60px 0px 100px 0;
 }
 
 .testimonialSection h2 {
@@ -129,5 +129,39 @@
 .slick-dots li button:before {
     color: #a2a2a2 !important;
     font-size: 10px !important; 
+}
+
+/* about section */
+.aboutBlocks {
+    display: flex;
+    gap: 5rem;
+    width: 100%;
+}
+
+.aboutContentBlock {
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+
+.aboutContentBlock > div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    line-height: 1.5;
+}
+
+
+.aboutImgBlock {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.aboutImgBlock > img {
+    width: 100%;
+    object-fit: contain;
+    object-position: center;
 }
 
