--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -4,6 +4,7 @@
 @import "./styles/header.css";
 @import "./styles//home.css";
 @import "./styles/components.css";
+@import "./styles/footer.css";
 
 :root {
   --blueColor: #0094ff;
