--- a/Frontend/src/styles/home.css
+++ b/Frontend/src/styles/home.css
@@ -132,6 +132,10 @@
 }
 
 /* about section */
+.aboutSection {
+    padding: 0 0 60px 0;
+}
+
 .aboutBlocks {
     display: flex;
     gap: 5rem;
@@ -164,4 +168,78 @@
     object-fit: contain;
     object-position: center;
 }
+
+
+/* contact us section */
+.contactSection {
+    padding: 60px 0px;
+    background-color: #EEF3FA;
+}
+
+.contactBlocks{
+    display: flex;
+    gap: 5rem;
+    width: 100%;
+}
+
+.contactImgBlock {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.contactImgBlock > img{
+    width: 60%;
+    object-fit: contain;
+    object-position: center;
+}
+
+.contactContentBlock{
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+
+.contactContentBlock > div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.contactContentBlock p {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.contactContentBlock p > img {
+    width: 22px;
+}
+
+.contactFollowBlock {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-top: 2rem;
+}
+
+.contactFollowBlock h3 {
+    font-size: 1.7rem;
+}
+
+.contactFollowBlock > div {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.contactFollowBlock > div > a >img {
+    object-fit: contain;
+    object-position: center;
+    border-radius: 4px;
+}
+
 
