complete the main landing page

--- a/Frontend/src/styles/footer.css
+++ b/Frontend/src/styles/footer.css
@@ -54,7 +54,7 @@
     width: 200px;
 }
 
-.footerLinkContent > div > img{
+.footerLinkImgContent > a > img{
     width: 100%;
     object-fit: contain;
     object-position: center;
