--- a/Frontend/src/styles/header.css
+++ b/Frontend/src/styles/header.css
@@ -35,7 +35,7 @@
 .restLinkHeader > a{
     text-decoration: none;
     color: black;
-    width: 150px;
+    width: 120px;
     height: 100%;
     text-align: center;
 }
@@ -44,5 +44,29 @@
     color: var(--blueColor);
     transition: all .3s;
 }
+
+.headerLogin {
+    display: flex;
+    gap: 1rem;
+}
+
+.headerLogin > a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.1rem;
+    padding: 5px 10px;
+    border-radius: 16px;
+    background-color: var(--blueColor);
+    transition: all .3s;
+    width: 60px;
+    text-align: center;
+}
+
+.headerLogin > a:hover {
+    background-color: black;
+}
+
+
+
 
 
