--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -6,6 +6,7 @@
 @import "./styles/components.css";
 @import "./styles/footer.css";
 @import "./styles/login.css";
+@import "./styles/signup.css";
 
 :root {
   --blueColor: #0094ff;
